--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
     <script src="script.js"></script>
     <script src="arrays.js"></script>
+    <script src="functions.js"></script>
     
 </body>
 </html>
