--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <script src="script.js"></script>
     <script src="arrays.js"></script>
     <script src="functions.js"></script>
+    <script src="ifstatements.js"></script>
     
 </body>
 </html>
