--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Hello World</h1>
 
-    <script src="script.js"></script>
+    <script src="variables.js"></script>
     <script src="arrays.js"></script>
     <script src="functions.js"></script>
     <script src="ifstatements.js"></script>
