--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script src="arrays.js"></script>
     <script src="functions.js"></script>
     <script src="ifstatements.js"></script>
+    <script src="objects.js"></script>
     
 </body>
 </html>
