--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <script src="functions.js"></script>
     <script src="ifstatements.js"></script>
     <script src="objects.js"></script>
+    <script src="loops.js"></script>
     
 </body>
 </html>
